--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -18,7 +18,7 @@
 
     <!-- FAQ -->
     <string name="faq_1_title">Kakvu kvalitetu kompresije fotografija trebam postaviti?</string>
-    <string name="faq_1_text">Ovisi o Vašem cilju. Za generičke namjene, većina ljudi savjetuje korištenje 75%-80%, kada je slika još uvijek dobre kvaliteta, ali veličina datoteke drastično se smanjuje u usporedbi sa 100%.</string>
+    <string name="faq_1_text" formatted="false">Ovisi o Vašem cilju. Za generičke namjene, većina ljudi savjetuje korištenje 75%-80%, kada je slika još uvijek dobre kvaliteta, ali veličina datoteke drastično se smanjuje u usporedbi sa 100%.</string>
 
     <!-- Settings -->
     <string name="save_photos">Spremanje fotografija i videozapisa u</string>
