[#49] Added placeholder for changing resolution and moved button to top

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,9 @@
     <string name="always_open_back_camera">Always open the app with the Back camera</string>
     <string name="save_photo_metadata">Save photo exif metadata</string>
     <string name="photo_compression_quality">Photo compression quality</string>
-    <string name="shutter">Shutter</string>
+    <string name="shutter">Shutter</string>s
+    <string name="advanced" translatable="false">Advanced Settings</string>
+    <string name="change_resolution" translatable="false">Change Resolution</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
