--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,7 +52,8 @@
 
         This app is just one piece of a bigger series of apps. You can find the rest of them at https://www.simplemobiletools.com
     </string>
-    <string name="grid_line" translatable="false">Grid line</string>
+    <string name="grid_line" translatable="false">Show grid line</string>
+    <string name="space_remaining" translatable="false">Show space remaining when recording</string>
 
     <!--
         Haven't found some strings? There's more at
