--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="qr_alert_title" translatable="false">QR Navigation</string>
     <string name="grid_line" translatable="false">Show grid line</string>
     <string name="space_remaining" translatable="false">Show space remaining when recording</string>
-    <string name="enter_caption">ENTER CAPTION</string>
+    <string name="enter_caption" translatable="false">ENTER CAPTION</string>
 
     <!--
         Haven't found some strings? There's more at
